--- a/room.html
+++ b/room.html
@@ -103,12 +103,142 @@
       height: 100%;
     }
 
-    .chat-messages {
-      flex: 1;
-      overflow-y: auto;
-      padding-right: 10px;
-    }
+    /* Стили для чата */
+  .chat-messages {
+    flex: 1;
+    overflow-y: auto;
+    padding: 15px;
+    background: #1a1a1a;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 15px;
+  }
 
+  .message {
+    max-width: 85%;
+    padding: 12px 16px;
+    border-radius: 18px;
+    word-wrap: break-word;
+    position: relative;
+    animation: messageAppear 0.3s ease-out;
+  }
+
+  @keyframes messageAppear {
+    from { opacity: 0; transform: translateY(10px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  .message.own {
+    align-self: flex-end;
+    background: linear-gradient(135deg, #007AFF, #0056CC);
+    color: white;
+    border-bottom-right-radius: 6px;
+  }
+
+  .message.other {
+    align-self: flex-start;
+    background: #2d2d2d;
+    color: #e1e1e1;
+    border: 1px solid #404040;
+    border-bottom-left-radius: 6px;
+  }
+
+  .message-system {
+    align-self: center;
+    background: rgba(255, 255, 255, 0.1);
+    color: #888;
+    font-style: italic;
+    font-size: 0.9em;
+    max-width: 100%;
+    text-align: center;
+    border-radius: 10px;
+    padding: 8px 12px;
+  }
+
+  .message-sender {
+    font-size: 0.75em;
+    opacity: 0.8;
+    margin-bottom: 4px;
+    font-weight: bold;
+  }
+
+  .message.own .message-sender {
+    color: rgba(255, 255, 255, 0.9);
+  }
+
+  .message.other .message-sender {
+    color: #a0a0a0;
+  }
+
+  /* Скроллбар для чата */
+  .chat-messages::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  .chat-messages::-webkit-scrollbar-track {
+    background: #1a1a1a;
+    border-radius: 3px;
+  }
+
+  .chat-messages::-webkit-scrollbar-thumb {
+    background: #444;
+    border-radius: 3px;
+  }
+
+  .chat-messages::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  /* Поле ввода чата */
+  .chat-input {
+    display: flex;
+    gap: 10px;
+    margin-top: 0;
+  }
+
+  .chat-input input {
+    flex: 1;
+    padding: 12px 16px;
+    background: #2d2d2d;
+    border: 1px solid #404040;
+    border-radius: 25px;
+    color: #fff;
+    font-size: 14px;
+    outline: none;
+    transition: all 0.3s ease;
+  }
+
+  .chat-input input:focus {
+    border-color: #007AFF;
+    background: #333;
+  }
+
+  .chat-input input::placeholder {
+    color: #888;
+  }
+
+  .chat-input button {
+    padding: 12px 24px;
+    background: linear-gradient(135deg, #007AFF, #0056CC);
+    color: #fff;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    min-width: 80px;
+  }
+
+  .chat-input button:hover {
+    background: linear-gradient(135deg, #0056CC, #004099);
+    transform: translateY(-1px);
+  }
+
+  .chat-input button:active {
+    transform: translateY(0);
+  }
     .chat-input {
       display: flex;
       gap: 10px;
@@ -160,6 +290,18 @@
     .invisible {
       display: none;
     }
+    
+    .connection-status {
+      font-size: 0.9em;
+      margin-top: 5px;
+    }
+
+    #connectionStatus {
+      padding: 4px 8px;
+      border-radius: 12px;
+      background: rgba(0, 255, 0, 0.1);
+      color: #4CAF50;
+    }
   </style>
 </head>
 <body>
@@ -168,6 +310,9 @@
     <div class="left">
 
       <div class="room-info">
+        <div class="connection-status">
+          <span id="connectionStatus">🟢 Подключен</span>
+        </div>
         🎞 Комната: <span id="room_id">123</span><br>
         ID комнаты: <strong id="entry_id_display">ABC</strong><br>
         Текущее видео: <strong id="video_title">Big Buck Bunny</strong><br>
